<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextIPAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/default_address" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_port" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_connect"/>

    <Button
        android:id="@+id/btnRock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRock"
        android:enabled="false"/>


    <Button
        android:id="@+id/btnPaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPaper"
        android:enabled="false"/>


    <Button
        android:id="@+id/btnScissors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnScissors"
        android:enabled="false"/>


</LinearLayout>